--- a/test2.html
+++ b/test2.html
@@ -1,1 +1,45 @@
-test
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"></meta>
+</head>
+<body>
+SnapInChatテスト
+
+<style type='text/css'>
+    .embeddedServiceHelpButton .helpButton .uiButton { background-color: #005290; font-family: "Salesforce Sans", sans-serif; }
+    .embeddedServiceHelpButton .helpButton .uiButton:focus { outline: 1px solid #005290; }
+    @font-face {
+    font-family: 'Salesforce Sans';
+    src: url('https://www.sfdcstatic.com/system/shared/common/assets/fonts/SalesforceSans/SalesforceSans-Regular.woff') format('woff'),
+    url('https://www.sfdcstatic.com/system/shared/common/assets/fonts/SalesforceSans/SalesforceSans-Regular.ttf') format('truetype');
+    }
+</style>
+
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+<script type='text/javascript'>
+var initESW = function(gslbBaseURL) {
+embedded_svc.settings.displayHelpButton = true; //または false
+embedded_svc.settings.language = ''; //たとえば、「en」または「en-US」を入力します
+
+//embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
+//embedded_svc.settings.disabledMinimizedText = '...'; //(エージェントがオフラインにデフォルト設定)
+
+//embedded_svc.settings.loadingText = ''; //(読み込み中にデフォルト設定)
+//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(リリースのドメインを設定して、訪問者がチャットセッション中にサブドメインを移動できるようにします)
+
+// Live Agent の設定
+//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+// Returns a valid button ID.
+//};
+//embedded_svc.settings.prepopulatedPrechatFields = {}; //事前チャットフォームの項目の自動入力を設定
+//embedded_svc.settings.fallbackRouting = []; //ボタン ID、ユーザ ID、または userId_buttonId の配列
+//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(デフォルトは [Salesforce に問い合わせる])
+
+embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+embedded_svc.settings.entryFeature = 'LiveAgent';
+
+embedded_svc.init('https://devhub-liveagent-rest3-dev-ed.my.salesforce.com', 'https://devhub-liveagent-rest3-developer-edition.ap5.force.com/liveagent', gslbBaseURL, '00D7F000006QP54', 'snap_in_chat_visualforce', { baseLiveAgentContentURL: 'https://c.la1-c1-ukb.salesforceliveagent.com/content', deploymentId: '5727F000000LmFP', buttonId: '5737F000000LdzL', baseLiveAgentURL: 'https://d.la1-c1-ukb.salesforceliveagent.com/chat', eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I7F000000bmwtUAA_165a255e89a', isOfflineSupportEnabled: false}); };if (!window.embedded_svc) { var s = document.createElement('script'); s.setAttribute('src', 'https://devhub-liveagent-rest3-dev-ed.my.salesforce.com/embeddedservice/5.0/esw.min.js'); s.onload = function() { initESW(null); }; document.body.appendChild(s); } else { initESW('https://service.force.com'); }</script>
+
+</body>
+</html>
