--- a/test2.html
+++ b/test2.html
@@ -1,13 +1,14 @@
 <apex:page showHeader="false" sidebar="false" cache="false" language="ja" standardStylesheets="false">
 <html>
 <head>
+<!-- スナップインのタグ -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"></meta>
 </head>
 <body>
   <h1>Live Agent サンプル</h1>
 
 
-<!-- スナップイン -->
+<!-- スナップインのタグ -->
 <style type='text/css'>
     .embeddedServiceHelpButton .helpButton .uiButton {
         background-color: #75C1A2;
