--- a/test2.html
+++ b/test2.html
@@ -60,6 +60,7 @@
           }];
         */
         //
+        alert(111);
         embedded_svc.settings.extraPrechatFormDetails = [{
             "label": "First Name",
             "value": "John",
