--- a/test2.html
+++ b/test2.html
@@ -60,6 +60,13 @@
           }];
         */
         //
+        embedded_svc.settings.prepopulatedPrechatFields = {
+          FirstName: “John”,
+          LastName: “Doe”,
+          Email: “john.doe@salesforce.com”,
+          Subject: “Hello”
+        };
+        /*
         embedded_svc.settings.extraPrechatFormDetails = [{
             "label": "First Name",
             "value": "John",
@@ -100,6 +107,7 @@
                 "isExactMatch": false, "fieldName": "Origin", "doCreate": true, "doFind": false, "label": "Origin"
               }]
           }];
+        */
         /*
 
         */
