--- a/test2.html
+++ b/test2.html
@@ -113,7 +113,7 @@
         /*
 
         */
-        alert(111);
+        //alert(111);
         // Live Agent の設定
         //embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
             // Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
