--- a/test2.html
+++ b/test2.html
@@ -7,10 +7,10 @@
   <h1>Live Agent サンプル</h1>
 
 
-<!-- スナップインのタグ -->
+<!-- スナップインのタグ #75C1A2 -->
 <style type='text/css'>
     .embeddedServiceHelpButton .helpButton .uiButton {
-        background-color: #75C1A2;
+        background-color: #000;
         font-family: "Salesforce Sans", sans-serif;
     }
     .embeddedServiceHelpButton .helpButton .uiButton:focus {
