--- a/test2.html
+++ b/test2.html
@@ -14,7 +14,7 @@
         font-family: "Salesforce Sans", sans-serif;
     }
     .embeddedServiceHelpButton .helpButton .uiButton:focus {
-        outline: 1px solid #75C1A2;
+        outline: 1px solid #000;
     }
     @font-face {
         font-family: 'Salesforce Sans';
