--- a/test2.html
+++ b/test2.html
@@ -30,8 +30,8 @@
         embedded_svc.settings.language = 'ja'; //たとえば、「en」または「en-US」を入力します
 
         /* ラベル */
-        embedded_svc.settings.defaultMinimizedText = 'チャット受付中';
-        embedded_svc.settings.disabledMinimizedText = 'チャット受付停止中';
+        embedded_svc.settings.defaultMinimizedText = '#チャット受付中';
+        embedded_svc.settings.disabledMinimizedText = '#チャット受付停止中';
         embedded_svc.settings.offlineSupportMinimizedText = 'offlineSupportMinimizedText';
         embedded_svc.settings.onlineLoadingText = 'onlineLoadingText';
         // embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
