--- a/test2.html
+++ b/test2.html
@@ -37,7 +37,7 @@
         // embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
         // embedded_svc.settings.disabledMinimizedText = '...'; //(エージェントがオフラインにデフォルト設定)
 
-        embedded_svc.settings.loadingText = 'ローディング..'; //(読み込み中にデフォルト設定)
+        embedded_svc.settings.loadingText = '#ローディング..'; //(読み込み中にデフォルト設定)
         //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(リリースのドメインを設定して、訪問者がチャットセッション中にサブドメインを移動できるようにします)
         
         // 追加
