--- a/test2.html
+++ b/test2.html
@@ -158,8 +158,8 @@
     }
   
     function onChatStarted() {
-      alert($('.helpButton .uiButton.helpButtonEnabled').size());
-      
+      //alert($('.helpButton .uiButton.helpButtonEnabled').size());
+      alert(1);
     }
 </script>
 
