--- a/test2.html
+++ b/test2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Live Agent サンプル</h1>
-  <input type="button" oncick="onChatStarted();" value="start"></input>
+  <input type="button" oncick="alert(111);" value="start"></input>
 
 <!-- スナップインのタグ #75C1A2 -->
 <style type='text/css'>
