--- a/test2.html
+++ b/test2.html
@@ -157,6 +157,7 @@
         initESW('https://service.force.com');
     }
     
+    alert($);
     $(window).load(function(){
       alert(99);
     });
