--- a/test2.html
+++ b/test2.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.js"
+  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+  crossorigin="anonymous"></script>
 <!-- スナップインのタグ -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"></meta>
 </head>
