--- a/test2.html
+++ b/test2.html
@@ -162,8 +162,9 @@
     
     
     function onChatStarted() {
-      //alert($('.helpButton .uiButton.helpButtonEnabled').size());
-      alert(1);
+      console.log($('.helpButton .uiButton.helpButtonEnabled').size());
+      $('.helpButton .uiButton.helpButtonEnabled').click();
+      //alert(1);
     }
 </script>
 
