--- a/test20181211.html
+++ b/test20181211.html
@@ -1,7 +1,9 @@
 <html>
 <head>
 <script>
-  window.opener.location.href = 'https://google.com';
+  window.onload = function() {
+    window.opener.location.href = 'https://google.com';
+  };
 </script>
 </head>
 <body>
