--- a/test20181211.html
+++ b/test20181211.html
@@ -4,8 +4,20 @@
   window.onload = function() {
     window.opener.location.href = 'https://google.com';
   };
+  
 </script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
+<script>
+function xhr() {
+  alert(99);
+}
+</script>
+
 </head>
 <body>
+  <input type="button" click="XHR();" value="test" name="test"></input>
 </body>
 </html>
