--- a/test20181211.html
+++ b/test20181211.html
@@ -26,6 +26,6 @@ function xhr() {
 
 </head>
 <body>
-  <input type="button" onclick="XHR();" value="test" name="test"></input>
+  <input type="button" onclick="xhr();" value="test" name="test"></input>
 </body>
 </html>
