--- a/test20181211.html
+++ b/test20181211.html
@@ -11,7 +11,7 @@
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
 <script>
-function xhr() {
+function testXhr() {
   alert(99);
   return;
   $.ajax({
@@ -26,6 +26,6 @@ function xhr() {
 
 </head>
 <body>
-  <input type="button" onclick="xhr();" value="test" name="test"></input>
+  <input type="button" onclick="testXhr();" value="test" name="test"></input>
 </body>
 </html>
