--- a/test20181211.html
+++ b/test20181211.html
@@ -15,7 +15,7 @@ function testXhr() {
   //return;
   $.ajax({
     type: "POST",
-    url: "some.php",
+    url: "https://pi.pardot.com/js/calendar/calendar.js",
     data: {}})
   .done(function( msg ) {
       alert( "データ保存: " + msg );
