--- a/test20181211.html
+++ b/test20181211.html
@@ -18,7 +18,8 @@ function testXhr() {
     url: "https://pi.pardot.com/js/calendar/calendar.js",
     data: {}})
   .done(function( msg ) {
-      alert( "データ保存: " + msg );
+      alert(11);
+      alert( msg );
     });
   alert(99);
 }
