--- a/test20181211.html
+++ b/test20181211.html
@@ -29,7 +29,7 @@ function testXhr() {
 
 </head>
 <body>
-  <input type="button" onclick="testNoopener();" value="testNoopener" name="testNoopener"></input>
+  <input type="button" onclick="testNoopener();" value="testNoopener" name="testNoopener" rel="noopener noreferrer"></input>
   <input type="button" onclick="testXhr();" value="testXhr" name="testXhr"></input>
 </body>
 </html>
