--- a/test4.html
+++ b/test4.html
@@ -12,7 +12,7 @@
 
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #05975C;
+		background-color: #05975C !important;
 		font-family: "Salesforce Sans", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
