--- a/test2.html
+++ b/test2.html
@@ -14,6 +14,7 @@
 <!-- スナップインのタグ #75C1A2 -->
 <style type='text/css'>
     .embeddedServiceHelpButton .helpButton .uiButton {
+        background-color:#c6aa76;
         font-family: "Salesforce Sans", sans-serif;
     }
     .embeddedServiceHelpButton .helpButton .uiButton:focus {
