--- a/test13.html
+++ b/test13.html
@@ -28,7 +28,7 @@
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //または false
 		embedded_svc.settings.language = ''; //たとえば、「en」または「en-US」を入力します
-		https://github.com/odekakeshimasyo/odekakeshimasyo.me/edit/gh-pages/test12.html
+		embedded_svc.settings.avatarImgURL = 'https://odekakeshimasyo.me/img-logo.png';
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(エージェントがオフラインにデフォルト設定)
