--- a/test8.html
+++ b/test8.html
@@ -29,7 +29,8 @@
 		embedded_svc.settings.displayHelpButton = true; //または false
 		embedded_svc.settings.language = ''; //たとえば、「en」または「en-US」を入力します
 		embedded_svc.settings.avatarImgURL = 'https://odekakeshimasyo.me/img-logo.png';
-
+		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://c.cs5.visual.force.com/resource/1545030650000/Test?';
+		
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(エージェントがオフラインにデフォルト設定)
 
