--- a/test_skill1.html
+++ b/test_skill1.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"></meta>
 </head>
 <body>
-  <h1>Live Agent サンプル2</h1>
+  <h1>Live Agent サンプルスキル1</h1>
 
 
 <style type='text/css'>
