--- a/test_skill1.html
+++ b/test_skill1.html
@@ -58,7 +58,7 @@
 			'X1',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-hnd.salesforceliveagent.com/content',
-				deploymentId: '572O00000008OOD',
+				deploymentId: '572O00000008ONK',
 				buttonId: '573O00000008OVs',
 				baseLiveAgentURL: 'https://d.la1-c1cs-hnd.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IO0000000CaSUMA0_167beb535e5',
