--- a/test7.html
+++ b/test7.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style>
+	.waitingGreeting.imageIsSet, .waitingMessage.imageIsSet {color:#000;}
+</style>
 </head>
 <body>
 <h1>Live Agent サンプル7</h1>
