--- a/test7.html
+++ b/test7.html
@@ -2,7 +2,14 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
-	.waitingGreeting.imageIsSet, .waitingMessage.imageIsSet {color:#000;}
+.waitingGreeting.imageIsSet {color:#231f20;}
+.waitingMessage.imageIsSet {color:#231f20;}
+
+.embeddedServiceSidebarHeader .headerButton {color:#231f20;}
+.embeddedServiceSidebarExtendedHeader {color:#231f20;}
+.embeddedServiceLiveAgentStateChatHeaderOption {color:#231f20;}
+.embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #231f20;}
+
 </style>
 </head>
 <body>
