--- a/test7.html
+++ b/test7.html
@@ -5,10 +5,10 @@
 .waitingGreeting.imageIsSet {color:#231f20;}
 .waitingMessage.imageIsSet {color:#231f20;}
 
-.embeddedServiceSidebarHeader .headerButton {color:#231f20;}
-.embeddedServiceSidebarExtendedHeader {color:#231f20;}
-.embeddedServiceLiveAgentStateChatHeaderOption {color:#231f20;}
-.embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #231f20;}
+.embeddedServiceSidebarHeader .headerButton {color:#231f20 !important;}
+.embeddedServiceSidebarExtendedHeader {color:#231f20 !important;}
+.embeddedServiceLiveAgentStateChatHeaderOption {color:#231f20 !important;}
+.embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #231f20 !important;}
 
 </style>
 </head>
