--- a/test7.html
+++ b/test7.html
@@ -9,7 +9,7 @@
 .embeddedServiceSidebarExtendedHeader {color:#231f20 !important;}
 .embeddedServiceLiveAgentStateChatHeaderOption {color:#231f20 !important;}
 .embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #231f20 !important;}
-
+	.embeddedServiceIcon svg {fill: #000 !important;}
 </style>
 </head>
 <body>
