--- a/test7.html
+++ b/test7.html
@@ -4,7 +4,7 @@
 <style>
 .waitingGreeting.imageIsSet {color:#231f20;}
 .waitingMessage.imageIsSet {color:#231f20;}
-
+.embeddedServiceSidebarHeader .headerText {color:#231f20;}
 .embeddedServiceSidebarHeader .headerButton {color:#231f20 !important;}
 .embeddedServiceSidebarExtendedHeader {color:#231f20 !important;}
 .embeddedServiceLiveAgentStateChatHeaderOption {color:#231f20 !important;}
