--- a/test8.html
+++ b/test8.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style>
+.cPreChatUI .button1 {background:#231f20 !important;}
+</style>
 </head>
 <body>
 <h1>Live Agent サンプル8</h1>
