--- a/test10.html
+++ b/test10.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style>
+.cPreChatUI .button1 {background:#23b97a !important;}
+</style>
 </head>
 <body>
 <h1>Live Agent サンプル10</h1>
