--- a/test11.html
+++ b/test11.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style>
+.waitingGreeting.imageIsSet {color:#322d29;}
+.waitingMessage.imageIsSet {color:#322d29;}
+.embeddedServiceSidebarHeader .headerText {color:#322d29;}
+.embeddedServiceSidebarHeader .headerButton {color:#322d29 !important;}
+.embeddedServiceSidebarExtendedHeader {color:#322d29 !important;}
+.embeddedServiceLiveAgentStateChatHeaderOption {color:#322d29 !important;}
+.embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #322d29 !important;}
+.embeddedServiceIcon svg {fill: #322d29 !important;}
+</style>
 </head>
 <body>
 <h1>Live Agent サンプル11</h1>
