--- a/test11.html
+++ b/test11.html
@@ -2,6 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
+.cPreChatUI .button1 {background:#23b97a !important;}
 .waitingGreeting.imageIsSet {color:#322d29;}
 .waitingMessage.imageIsSet {color:#322d29;}
 .embeddedServiceSidebarHeader .headerText {color:#322d29;}
