--- a/test12.html
+++ b/test12.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
-.cPreChatUI .button1 {background:#322d29 !important;}
+.cPreChatUI .button1 {background:#23b97a !important;}
 </style>
 </head>
 <body>
