--- a/test7.html
+++ b/test7.html
@@ -2,6 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
+.embeddedServiceSidebarHeader .headerText {color:#231f20 !important;}
 .waitingGreeting.imageIsSet {color:#231f20;}
 .waitingMessage.imageIsSet {color:#231f20;}
 .embeddedServiceSidebarHeader .headerText {color:#231f20;}
