--- a/test11.html
+++ b/test11.html
@@ -5,12 +5,13 @@
 .cPreChatUI .button1 {background:#23b97a !important;}
 .waitingGreeting.imageIsSet {color:#322d29;}
 .waitingMessage.imageIsSet {color:#322d29;}
-.embeddedServiceSidebarHeader .headerText {color:#322d29;}
+.embeddedServiceSidebarHeader .headerText {color:#322d29 !important;}
 .embeddedServiceSidebarHeader .headerButton {color:#322d29 !important;}
 .embeddedServiceSidebarExtendedHeader {color:#322d29 !important;}
 .embeddedServiceLiveAgentStateChatHeaderOption {color:#322d29 !important;}
 .embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #322d29 !important;}
 .embeddedServiceIcon svg {fill: #322d29 !important;}
+.embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#cbb279 !important;}
 </style>
 </head>
 <body>
