--- a/test10.html
+++ b/test10.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
 .cPreChatUI .button1 {background:#23b97a !important;}
+.embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#322d29 !important;}
 </style>
 </head>
 <body>
