--- a/test6.html
+++ b/test6.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style>
+.embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#00704a !important;}
+</style>
 </head>
 <body>
 <h1>Live Agent サンプル6</h1>
