--- a/test6.html
+++ b/test6.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#00704a !important;}
+.embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
 </style>
 </head>
 <body>
