--- a/test7.html
+++ b/test7.html
@@ -12,6 +12,7 @@
 .embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #231f20 !important;}
 .embeddedServiceIcon svg {fill: #000 !important;}
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#c6aa76 !important;}
+.embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
 </style>
 </head>
 <body>
