--- a/test8.html
+++ b/test8.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
 .cPreChatUI .button1 {background:#231f20 !important;}
+.embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
 </style>
 </head>
 <body>
