--- a/test9.html
+++ b/test9.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<style>
+.embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+</style>
 </head>
 <body>
 <h1>Live Agent サンプル9</h1>
