--- a/test10.html
+++ b/test10.html
@@ -4,6 +4,7 @@
 <style>
 .cPreChatUI .button1 {background:#23b97a !important;}
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#23b97a !important;}
+.embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
 </style>
 </head>
 <body>
