--- a/test11.html
+++ b/test11.html
@@ -12,6 +12,7 @@
 .embeddedServiceLiveAgentStateChatHeaderOption .embeddedServiceIcon {border:1px solid #322d29 !important;}
 .embeddedServiceIcon svg {fill: #322d29 !important;}
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#cbb279 !important;}
+.embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
 </style>
 </head>
 <body>
