--- a/test10.html
+++ b/test10.html
@@ -34,7 +34,7 @@
 		embedded_svc.settings.displayHelpButton = true; //または false
 		embedded_svc.settings.language = ''; //たとえば、「en」または「en-US」を入力します
 		embedded_svc.settings.avatarImgURL = 'https://odekakeshimasyo.me/img-logo.png';
-		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://dev05-sbj-sites-dev05.cs5.force.com/resource/Test10?';
+		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://dev05-sbj-sites-dev05.cs5.force.com/resource/Test10';
 
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(エージェントがオフラインにデフォルト設定)
