--- a/test6.html
+++ b/test6.html
@@ -4,7 +4,7 @@
 <style>
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#00704a !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
-.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:transparent !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#231f20 !important;}
 </style>
 </head>
 <body>
