--- a/test7.html
+++ b/test7.html
@@ -13,6 +13,7 @@
 .embeddedServiceIcon svg {fill: #000 !important;}
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#c6aa76 !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#fff !important;}
 </style>
 </head>
 <body>
