--- a/test8.html
+++ b/test8.html
@@ -4,6 +4,7 @@
 <style>
 .cPreChatUI .button1 {background:#231f20 !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#00704a !important;}
 </style>
 </head>
 <body>
