--- a/test9.html
+++ b/test9.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <style>
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#c6aa76 !important;}
 </style>
 </head>
 <body>
