--- a/test10.html
+++ b/test10.html
@@ -5,6 +5,7 @@
 .cPreChatUI .button1 {background:#23b97a !important;}
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#23b97a !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#322d29 !important;}
 </style>
 </head>
 <body>
