--- a/test11.html
+++ b/test11.html
@@ -13,6 +13,7 @@
 .embeddedServiceIcon svg {fill: #322d29 !important;}
 .embeddedServiceLiveAgentStateWaiting .loadingBall {background-color:#cbb279 !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#fff !important;}
 </style>
 </head>
 <body>
