--- a/test12.html
+++ b/test12.html
@@ -4,6 +4,7 @@
 <style>
 .cPreChatUI .button1 {background:#322d29 !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#23b97a !important;}
 </style>
 </head>
 <body>
