--- a/test13.html
+++ b/test13.html
@@ -4,6 +4,7 @@
 <style>
 .cPreChatUI .button1 {background:#23b97a !important;}
 .embeddedServiceLiveAgentStateWaitingHeader .waitingImage {background-size:29% !important;}
+.embeddedServiceLiveAgentStateChatHeader.reconnecting {background-color:#cbb279 !important;}
 </style>
 </head>
 <body>
