--- a/test6.html
+++ b/test6.html
@@ -35,7 +35,10 @@
 		embedded_svc.settings.language = ''; //たとえば、「en」または「en-US」を入力します
 		embedded_svc.settings.avatarImgURL = 'https://odekakeshimasyo.me/img-logo.png';
 		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://dev05-sbj-sites-dev05.cs5.force.com/resource/Test6';
-
+        	
+		embedded_svc.settings.defaultMinimizedText = 'チャット受付中';
+        	embedded_svc.settings.disabledMinimizedText = 'チャット受付停止中';
+		
 		//embedded_svc.settings.defaultMinimizedText = '...'; //(エキスパートとチャットにデフォルト設定)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(エージェントがオフラインにデフォルト設定)
 
