--- a/test4.html
+++ b/test4.html
@@ -52,6 +52,43 @@
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
+embedded_svc.settings.extraPrechatInfo = [{
+  "entityName": "Contact",
+  "showOnCreate": true,
+  "linkToEntityName": "Case",
+  "linkToEntityField": "ContactId",
+  "saveToTranscript": "ContactId",
+  "entityFieldMaps": [{
+    "isExactMatch": true,
+    "fieldName": "FirstName",
+    "doCreate": true,
+    "doFind": true,
+    "label": "First Name"
+  }, {
+    "isExactMatch": true,
+    "fieldName": "LastName",
+    "doCreate": true,
+    "doFind": true,
+    "label": "Last Name"
+  }]
+}, {
+  "entityName": "Case",
+  "showOnCreate": true,
+  "saveToTranscript": "CaseId",
+  "entityFieldMaps": [{
+    "isExactMatch": false,
+    "fieldName": "Subject",
+    "doCreate": true,
+    "doFind": false,
+    "label": "issue"
+  }, {
+    "isExactMatch": false,
+    "fieldName": "Origin",
+    "doCreate": true,
+    "doFind": false,
+    "label": "Origin"
+  }]
+}];
 		embedded_svc.init(
 			'https://cs5.salesforce.com',
 			'https://dev05-sbj-community-dev05.cs5.force.com/test2',
