--- a/test4.html
+++ b/test4.html
@@ -52,6 +52,24 @@
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
+embedded_svc.settings.extraPrechatFormDetails = [{
+  "label": "First Name",
+  "value": "John",
+  "displayToAgent": true
+}, {
+  "label": "Last Name",
+  "value": "Doe",
+  "displayToAgent": true
+}, {
+  "label": "Email",
+  "value": "john.doe@salesforce.com",
+  "displayToAgent": true
+}, {
+  "label": "issue",
+  "value": "Overriding your setup",
+  "displayToAgent": true
+}];
+
 embedded_svc.settings.extraPrechatInfo = [{
   "entityName": "Contact",
   "showOnCreate": true,
@@ -70,6 +88,12 @@ embedded_svc.settings.extraPrechatInfo = [{
     "doCreate": true,
     "doFind": true,
     "label": "Last Name"
+  }, {
+    "isExactMatch": true,
+    "fieldName": "Email",
+    "doCreate": true,
+    "doFind": true,
+    "label": "Email"
   }]
 }, {
   "entityName": "Case",
@@ -81,6 +105,12 @@ embedded_svc.settings.extraPrechatInfo = [{
     "doCreate": true,
     "doFind": false,
     "label": "issue"
+  }, {
+    "isExactMatch": false,
+    "fieldName": "Status",
+    "doCreate": true,
+    "doFind": false,
+    "label": "Status"
   }, {
     "isExactMatch": false,
     "fieldName": "Origin",
