--- a/test4.html
+++ b/test4.html
@@ -54,7 +54,7 @@
 
 embedded_svc.settings.extraPrechatFormDetails = [{
   "label": "First Name",
-  "value": "John",
+  "value": "One",
   "displayToAgent": true
 }, {
   "label": "issue",
