--- a/test4.html
+++ b/test4.html
@@ -58,7 +58,7 @@ embedded_svc.settings.extraPrechatFormDetails = [{
   "displayToAgent": true
 }, {
   "label": "issue",
-  "value": "Overriding your setup",
+  "value": "Overriding 1234",
   "displayToAgent": true
 }];
 
@@ -85,12 +85,6 @@ embedded_svc.settings.extraPrechatInfo = [{
     "doCreate": true,
     "doFind": false,
     "label": "issue"
-  }, {
-    "isExactMatch": false,
-    "fieldName": "Status",
-    "doCreate": true,
-    "doFind": false,
-    "label": "Status"
   }]
 }];
 		embedded_svc.init(
