--- a/test4.html
+++ b/test4.html
@@ -53,6 +53,27 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 embedded_svc.settings.extraPrechatFormDetails = [{
+  "label": "Origin",
+  "value": "chat",
+  "displayToAgent": true
+}];
+
+embedded_svc.settings.extraPrechatInfo = [{
+  "entityName": "Case",
+  "showOnCreate": true,
+  "saveToTranscript": "CaseId",
+  "entityFieldMaps": [{
+    "isExactMatch": false,
+    "fieldName": "Origin",
+    "doCreate": true,
+    "doFind": false,
+    "label": "Origin"
+  }]
+}];
+
+
+/*
+embedded_svc.settings.extraPrechatFormDetails = [{
   "label": "CaseOwnerId",
   "value": "00GO0000004zC1jMAE",
   "displayToAgent": true
@@ -70,6 +91,7 @@ embedded_svc.settings.extraPrechatInfo = [{
     "label": "CaseOwnerId"
   }]
 }];
+*/
 		embedded_svc.init(
 			'https://cs5.salesforce.com',
 			'https://dev05-sbj-community-dev05.cs5.force.com/test2',
