--- a/test4.html
+++ b/test4.html
@@ -53,8 +53,8 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 embedded_svc.settings.extraPrechatFormDetails = [{
-  "label": "Origin",
-  "value": "chat",
+  "label": "RecordTypeId",
+  "value": "012O0000000Dm5bIAC",
   "displayToAgent": true
 }];
 
@@ -64,10 +64,10 @@ embedded_svc.settings.extraPrechatInfo = [{
   "saveToTranscript": "CaseId",
   "entityFieldMaps": [{
     "isExactMatch": false,
-    "fieldName": "Origin",
+    "fieldName": "RecordTypeId",
     "doCreate": true,
     "doFind": false,
-    "label": "Origin"
+    "label": "RecordTypeId"
   }]
 }];
 
