--- a/test_header.html
+++ b/test_header.html
@@ -1,9 +1,8 @@
-test
 <header id="meganav2018" class="global is-member">
 <h1><a href="/"><img src="/common/images/img-logo.png" alt="スターバックス コーヒー ジャパン" width="70" height="70"><i></i></a></h1>
 <nav class="megaNav">
 <ul class="js-megaNav">
-<li class="mn-tab cafe" data-obj="cafe"><a href="javascript:void(0)" class="js-open">Cafe</a></li>
+<li class="mn-tab cafe" data-obj="cafe"><a href="javascript:void(0)" class="js-open">Cafe2</a></li>
 <li class="mn-tab coffee" data-obj="coffee"><a href="javascript:void(0)" class="js-open">Coffee <span class="indention">&amp; Goods</span></a></li>
 <li class="mn-tab companyAndJob" data-obj="companyAndJob"><a href="javascript:void(0)" class="js-open">Company</a></li>
 <li class="mn-tab serviceAndLogin login active" data-obj="serviceAndLogin">
