--- a/test_css.html
+++ b/test_css.html
@@ -1,3 +1,3 @@
 test3
-<link rel="stylesheet" href="/platform.css?ver=20180315" type="text/css" />
+<link rel="stylesheet" href="/platform.css" type="text/css" />
 test4
