--- a/test_css.html
+++ b/test_css.html
@@ -1,3 +1,3 @@
 css
-<link rel="stylesheet" href="/platform.css" type="text/css" />
+<link rel="stylesheet" href="https://odekakeshimasyo.me/platform.css" type="text/css" />
 css/
