--- a/test_css.html
+++ b/test_css.html
@@ -1,1 +1,5 @@
-<link rel="stylesheet" href="https://odekakeshimasyo.me/platform.css" type="text/css" />
+<link rel="apple-touch-icon-precomposed" href="//d3vgbguy0yofad.cloudfront.net/common/images/apple-touch-icon-precomposed.png" />
+<link rel="shortcut icon" href="https://www.starbucks.co.jp/favicon.ico" type="image/ico" />
+<link rel="icon" href="https://www.starbucks.co.jp/favicon.png" type="image/png" />
+<link media="all" rel="stylesheet" href="//d3vgbguy0yofad.cloudfront.net/common/subdomain/css/platform.css?ver=20181015" type="text/css" />
+<link media="all and (max-width: 909px)" rel="stylesheet" href="//d3vgbguy0yofad.cloudfront.net/common/subdomain/css/sp.css?ver=20181015" type="text/css" />
