--- a/sb-include/common/subdomain/css.html
+++ b/sb-include/common/subdomain/css.html
@@ -1,1 +1,1 @@
-<link media="all and (max-width: 909px)" rel="stylesheet" href="//odekakeshimasyo.me/common/subdomain/css/sp.css" type="text/css" />
+<link media="(max-width: 909px)" rel="stylesheet" href="//odekakeshimasyo.me/common/subdomain/css/sp.css" type="text/css" />
