--- a/test_starbucksrewards_dev07.html
+++ b/test_starbucksrewards_dev07.html
@@ -6,7 +6,7 @@
 
 <script type="text/javascript">
 var s = document.createElement('script');
-s.src = 'https://dev07-starbuckscoffeejapan2.cs31.force.com/chat/resource/' + ((new Date()).getTime()) + '/chat/common/js/chat.js?b=starbuckscard_dev07';
+s.src = 'https://dev07-starbuckscoffeejapan2.cs31.force.com/chat/resource/' + ((new Date()).getTime()) + '/chat/common/js/chat.js?b=starbucksrewards_dev07';
 document.body.appendChild(s);
 </script>
 
