--- a/test/mystarbucks_dev07.html
+++ b/test/mystarbucks_dev07.html
@@ -6,6 +6,7 @@
 
 <script type="text/javascript">
 var s = document.createElement('script');
+s.id = 'eswchat';
 s.src = 'https://dev07-starbuckscoffeejapan2.cs31.force.com/chat/resource/' + ((new Date()).getTime()) + '/chat/common/js/chat.js?b=mystarbucks_dev07';
 document.body.appendChild(s);
 </script>
